--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -20,7 +20,10 @@
   <body>
     <img src="../Images/coverphoto.png" class="coverphoto"></a>
     <div class="homesearch">
-      <input type="search" placeholder="What are you shopping for today?" class="searchbox">
+      <form action="../HTML/productpage.html">
+        <input type="search" placeholder="What are you shopping for today?"></input>
+        <input type="submit" value="Submit"></input>
+      </form>
     </div>
     <div class="homeitems">
       <h1>Today's Featured Items</h1>
