--- a/HTML/productpage.html
+++ b/HTML/productpage.html
@@ -11,9 +11,13 @@
         <li>Products</li>
         <li>Orders</li>
         <li>Contact</li>
-        <a href="../HTML/Index.html"><img src="../Images/Shmamazon.png" class="Shmamazon"></a>
+        <a href="../HTML/Index.html"><img src="../Images/Shmamazon.png" class="Shmamazon3"></a>
         <img src="../Images/cart.png" class="icon"></a>
         <img src="../Images/profile.png" class="icon2"></a>
+        <form action="../HTML/checkout.html">
+          <input type="search" placeholder="What are you shopping for today?"></input>
+          <input type="submit" value="Submit"></input>
+        </form>
       </ul>
     </nav>
   </head>
@@ -44,6 +48,15 @@
           <img src="../Images/googlenexus.png" class="sides2"></a>
         </div>
         <div class="addto">
+          <form action="../HTML/checkout.html">
+            <input type="submit" value="Add to cart"></input>
+            <h3>Price: <span style="color: #27ae60">$799.00</span></h3>
+            <h3>Status: <span style="color: #27ae60">In Stock</span></h3>
+            <br>
+            <input type="radio" name="answer" value="female">Include <span style="color: #3498db">3-Year Protection</span> for <span style="color: #c0392b">$9.42</span></input>
+            <br>
+            <input type="radio" name="answer" value="female">Include <span style="color: #3498db">2-Year Protection</span> for <span style="color: #c0392b">$5.81</span></input>
+          </form>
         </div>
       </div>
       <h1>More Items Like This</h1>
