--- a/HTML/Index.html
+++ b/HTML/Index.html
@@ -1,8 +1,8 @@
 <html>
   <head>
     <meta charset="UTF-8">
-    <meta name="keywords" content="list keywords here">
-    <meta name="description" content="describe what the website is about here">
+    <meta name="keywords" content="Shmamazon, index, homepage">
+    <meta name="description" content="Shmamazon website">
     <meta name="author" content="Shmamazon">
     <link rel="stylesheet" type="text/css" href="../Style/style.css">
     <title>Shmamazon</title>
